# back-end/app/api/v1/routes/lectures.js
@@ -5,7 +5,7 @@ const lecturesRouter = Router();
 
 // Lecture routes
 lecturesRouter.get('/', listLectures);
-lecturesRouter.get('/available-resources', listAvailableResources);
+lecturesRouter.get('/find-available-resources', listAvailableResources);
 lecturesRouter.get('/:id', getLectureById);
 lecturesRouter.post('/', createLecture);
 lecturesRouter.patch('/:id', updateLecture);
